# alfred-task-manager

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  README.md  TESTING_PROTOCOL.md  alfred-codebase.md  epic-task-manager.md  main.py  pyproject.toml  run.sh  test_alfred_flow.py  test_state_management.py
.claude/commands/: add-module-memory.md  analyze-module-patterns.md  create_custom_command.md  prime.md  sync-module-docs.md  test_alfred_end_to_end.md  update-claude-memories.md
ai/: banner.txt  stateless-refactor-incomplete-analysis.md  subtask_generation.md
ai/alfred_tasks/: AL-01.md  AL-02.md  AL-03.md  AL-04.md  AL-05.md  AL-06.md  AL-07.md  AL-08.md  AL-09.md  AL-10.md  AL-11.md  AL-12.md  AL-13.md  AL-14.md  AL-15.md  AL-16.md  AL-17.md  AL-18.md  AL-19.md  AL-20.md  AL-21.md  AL-22.md  AL-23.md  AL-24-30.md  AL-31-34.md  AL-35-39.md  AL01.md  AL02.md  AL03.md  AL04.md  AL08.md  AL11_test_report.md  al_task_1.md  al_task_10.md  al_task_11.md  al_task_12.md  al_task_13.md  al_task_14.md  al_task_15.md  al_task_16.md  (+14 more)
ai/changes/: statemanager.md
ai/data_for_patterns/: tools.md
ai/docs/: claude_code_documentation.md  pytest_best_pracitces.md  spec.md  transitions-ui.md
ai/guidelines/: coding_guidelines.md  custom_slash_command_template.md  jira_issue_creation_guidelines.md  lost_framework.md  precision_prompting_guide.md  testing_guidelines.md
ai/planning_refactor/: artifact_specifications.md  claude_code_planning_design.md  file_creation_plan.md  implementation_design.md  prompt_template_specifications.md  testing_strategy.md
ai/prompts/: README.md  anthropic_prompt_example.md  conductor_jira_workflow.md  cursor_workflow_instructions.md  end_to_end.md  (+5 more)
docs/: core_principles.md  template_migration.md
temp_scripts/: al11_final_demo.py  al11_validation_results.json  debug_exact_call.py  debug_prompt_issue.py  debug_revision_flow.py  debug_tool_call.py  debug_tool_recovery.py  error_scenario_tests.py  error_scenarios.py  high_risk_refactoring_opportunities.md  mcp_tools_validator.py  mcp_validation_test.py  mock_data.py  mock_task_generator.py  state_verification.py  test_al11_simple.py  test_full_workflow.py  test_harness.py  test_reporting.py  validate_al11_complete.py  validation_helpers.py  validation_results.json
tests/: __init__.py  conftest.py  test_alfred_config.py  test_exceptions.py  test_harness_verification.py  test_isolation.py  test_prompts.py  test_simple_discovery.py  test_validation_etm14.py
(+375 files in other folders)
